# jerry21849

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
crypto_crew/: __init__.py  __main__.py  agents.py  cli.py  config.py  crew.py  models.py  report.py  tasks.py  web.py
crypto_crew/integrations/: cli_runner.py
crypto_crew/state/: paper_portfolio.json
crypto_crew/tools/: backtest.py  market.py  news.py  onchain.py  paper_trade.py  risk.py  sentiment.py  technical.py
src/: App.vue
src/components/: ChartPanel.vue  PredictionPanel.vue
src/composables/: useCryptoPrice.js  usePrediction.js
tests/: test_backtest.py  test_backtest_extended.py  test_crew_integration.py  test_paper_multi_strategy.py  test_paper_trade.py  test_report.py  test_sentiment_fallback.py  test_technical_free.py  test_tools_market.py
tests/fixtures/: btc_ohlcv_sample.json
